attempting to fix mobile nav spacing

--- a/public/themes/v2/stylesheets/all.css
+++ b/public/themes/v2/stylesheets/all.css
@@ -1418,12 +1418,12 @@
 		}
 		
 		#navigation-user-menu {
-			top: 76px;
+			top: 77px;
 			margin-top: 0;
 		}
 		
 		#navigation-main {
-			top: 119px;
+			top: 120px;
 		}
 		
 		#navigation-user.menu a,
